# portfolio-api

./: README.md  pyproject.toml
app/: config.py  main.py  middleware.py
app/database/: db.py
app/models/: award.py  basic_info.py  certification.py  custom_types.py  education.py  experience.py  image.py  interest.py  project.py  publication.py  reference.py  skill.py  user.py  video.py
app/routers/: auth.py  awards.py  basicinfo.py  certifications.py  educations.py  experiences.py  interests.py  projects.py  publications.py  references.py  skills.py  users.py
app/utils/: security.py
