[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["chineduCoded <chinedujohn17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
loguru = "^0.7.2"
motor = "^3.4.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
httpx = "^0.27.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pydantic-extra-types = "^2.7.0"
python-email = "^0.0.1"
python-jose = "^3.3.0"
pycountry = "^23.12.11"
bcrypt = "^4.1.3"
passlib = "^1.7.4"
validators = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
